# chainz

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  default.nix  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/superpowers/plans/: 2026-07-16-terminal-experience.md
docs/superpowers/specs/: 2026-07-16-phase4-design.md
src/: chain.rs  chainlist.rs  cli.rs  config.rs  doctor.rs  endpoint.rs  init.rs  key.rs  lib.rs  listing.rs  main.rs  opt.rs  prompt.rs  ui.rs  util.rs  var.rs  variables.rs
src/chain/: mod.rs  rpc.rs  wizard.rs
src/chain/wizard/: tests.rs
src/config/: store.rs  tests.rs
src/key/: tests.rs
src/variables/: tests.rs
tests/: cli.rs
