[package]
name = "chainz"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.4", features = ["full"] }
alloy-primitives = "0.7.7"
anyhow = "1.0.86"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0.1"
reqwest = "0.12.9"
rpassword = "7.3.1"
serde = "1.0.204"
serde_json = "1.0.120"
structopt = "0.3.26"
tokio = { version = "1.38.0", features = ["full"] }
colored = "2.0"
futures = "0.3.31"
