[package]
name = "chainz"
version = "0.2.0"
edition = "2021"

[dependencies]
alloy = { version = "1", features = ["full"] }
anyhow = "1.0.86"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0.1"
reqwest = "0.12.9"
rpassword = "7.3.1"
serde = "1.0.204"
serde_json = "1.0.120"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
colored = "2.0"
futures = "0.3.31"
aes-gcm = "0.10.3"
base64 = "0.21.4"
keyring = "2.0.5"
rand = "0.8.5"
argon2 = "0.5"
zeroize = "1"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
tempfile = "3.14.0"
